# hydrasight

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_CONTEXT.md  README.md  SECURITY.md  hydrasight.json  hydrasight.json.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
hydrasight/: __init__.py  __main__.py
hydrasight/cli/: __init__.py  display.py  shell.py  shell_handlers.py  shell_renderer.py
hydrasight/config/: __init__.py  defaults.py  loader.py
hydrasight/core/: __init__.py  builtin_actions.py  command_builder.py  engine.py  planner.py  profiles.py  registry.py
hydrasight/integrations/: __init__.py  exploit_db.py  exploit_suggestion.py  kali_api.py
hydrasight/models/: __init__.py  actions.py  commands.py  finding_confidence.py  finding_record.py  findings.py  planner_state.py  report_model.py  roe.py  timeline.py
hydrasight/parsers/: __init__.py  base_parser.py
hydrasight/reporting/: __init__.py  json_reporter.py  pdf_reporter.py  remediation.py
hydrasight/security/: __init__.py  command_sanitizer.py
tests/: test_ai_client_options.py  test_command_builder.py  test_command_router.py  test_command_sanitizer.py  test_context_builder.py  test_dispatcher.py  test_exploit_suggestion.py  test_finding_record.py  test_findings.py  test_ip_utils.py  test_nl_pipeline.py  test_parser.py  test_pass3_refactor.py  test_pass4_reporting.py  test_phase4.py  test_planner_state.py  test_post_access.py  test_registry.py  test_roe.py  test_shell_refactor.py
(+18 files in other folders)
